README update, loop lib name change, index.html update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<script src="prefixfree/prefixfree.min.js"></script>
 		<script src="prefixfree/prefixfree.vars.js"></script>
 		<script src="prefixfree.random.js"></script>
-		<script src="prefixfree.for.js"></script>
+		<script src="prefixfree.loop.js"></script>
 		<script src="prefixfree.parent.js"></script>
 	</body>
 </html>
