prefixfree.random.js update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			loopend;
 			
 			ul! > li.active {
-				background: tomato;
+				background: rgb(random(150, 230), random(150, 230), random(150, 230));
 				border-radius: 5px;
 			}
 		</style>
